# autopilot_route_pi

./: .gitignore  AutopilotRoute.fbp  CMakeLists.txt  Plugin.cmake  README  README.md  VERSION.cmake  appveyor.yml  bld.bat  bldwin-rdeb.sh  update-templates
.circleci/: config.yml
OLD/: CMakeLists.txt.bak
OLD/src/: ocpn_plugin.h
OLD/src/nmea0183/: xte.cpp
build-deps/: control
ci/: circleci-build-debian.sh
cmake/: CmakeSetup.cmake  PluginConfigure.cmake  PluginGL.cmake  PluginJSON.cmake  PluginNMEA.cmake  PluginPackage.cmake  dummy.cpp  version.h.in
flatpak/: org.opencpn.OpenCPN.Plugin.demo.yaml
libs/jsoncpp/: CMakeLists.txt
libs/nmea0183/: CMakeLists.txt
libs/nmea0183/src/: nmea0183.hpp
manual/: antora.yml  site.yml
manual/autopilot_route/: antora.yml  site.yml
manual/autopilot_route/modules/ROOT/pages/: autopilot_route.adoc
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  POTFILES.in.test  autopilot_route_pi.pot  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: AutopilotRouteUI.cpp  AutopilotRouteUI.h  PreferencesDialog.cpp  PreferencesDialog.h  apdc.cpp  autopilot_route_pi.cpp  autopilot_route_pi.cpp.bak  autopilot_route_pi.h  computation.cpp  computation.h  concanv.cpp  concanv.h  georef.c  georef.h  icons.cpp  icons.h  ocpn_plugin.h  wxWTranslateCatalog.h
src/nmea0183/: apb.cpp
src/plugingl/: pidc.cpp.bak  pidc.h
